# skindex-test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.configs/: database.yaml  message_broker.yaml
.github/workflows/: ci.yaml
chat_service/: app.py  bootstrap.py
chat_service/adapters/: orm.py
chat_service/domains/: commands.py
chat_service/domains/models/: message.py  room.py
chat_service/entrypoints/: schemas.py
chat_service/entrypoints/rest/: app.py  websocket.py
chat_service/entrypoints/rest/routers/: __init__.py  chat.py  fe.py  room.py  ws.py
chat_service/services/: command.py  event.py  views.py
docs/: c4component.mmd  c4container.mmd  c4context.mmd  diagram.mmd
tests/: conftest.py
tests/e2e/: test_chat.py  test_get_chat.py
